@@ -1,3 +1,8 @@
+2012-08-08 Sebastian Reitenbach <sebastia@l00-bugdead-prods.de>
+
+	* DiffWrapper.m
+	switch unsigned ints to NSUInteger to prevent compilation warning
+
 2012-08-06 Riccardo Mottola <rm@gnu.org>
 
 	* DiffFileChooser.h
